Edit text comments in EDA.ipynb

--- a/EDA/EDA.ipynb
+++ b/EDA/EDA.ipynb
@@ -2928,7 +2928,7 @@
       },
       "source": [
         "### Administrative\n",
-        "*число страниц категории **Administrative**, посещенные в рамках сессии*"
+        "*число страниц категории __*Administrative*__, посещенные в рамках сессии*"
       ]
     },
     {
@@ -3137,7 +3137,7 @@
       },
       "source": [
         "### Administrative_Duration\n",
-        "*время, проведенное на **Administrative** страницах в рамках сессии*"
+        "*время, проведенное на __*Administrative*__ страницах в рамках сессии*"
       ]
     },
     {
@@ -3369,7 +3369,7 @@
       },
       "source": [
         "### Informational\n",
-        "*число страниц категории **Informational**, посещенные в рамках сессии*"
+        "*число страниц категории __*Informational*__, посещенные в рамках сессии*"
       ]
     },
     {
@@ -3539,7 +3539,7 @@
       },
       "source": [
         "### Informational_Duration\n",
-        "*время, проведенное на **Informational** страницах в рамках сессии*"
+        "*время, проведенное на __*Informational*__ страницах в рамках сессии*"
       ]
     },
     {
@@ -3782,7 +3782,7 @@
       },
       "source": [
         "### ProductRelated\n",
-        "*число страниц категории **ProductRelated**, посещенные в рамках сессии*"
+        "*число страниц категории __*ProductRelated*__, посещенные в рамках сессии*"
       ]
     },
     {
@@ -4424,7 +4424,7 @@
       },
       "source": [
         "### ProductRelated_Duration\n",
-        "*время, проведенное на **ProductRelated** страницах в рамках сессии*"
+        "*время, проведенное на __*ProductRelated*__ страницах в рамках сессии*"
       ]
     },
     {
@@ -4673,7 +4673,7 @@
         "id": "UInb-qQLDV3F"
       },
       "source": [
-        "####**```BounceRates```**\n",
+        "### BounceRates\n",
         "\n",
         "процент посещений только одной определенной страницы и выхода без совершения дополнительных действий"
       ]
@@ -4836,7 +4836,7 @@
         "id": "_U4laJJ9AuJr"
       },
       "source": [
-        "####**```ExitRates```**\n",
+        "### ExitRates\n",
         "\n",
         "доля сессий, завершенных просмотром определенной страницы"
       ]
@@ -4999,7 +4999,7 @@
         "id": "VvOYWiEkBSEw"
       },
       "source": [
-        "####**```PageValues```**\n",
+        "### PageValues\n",
         "\n",
         "средняя ценность страниц, рассчитываемая путем деления общего дохода на количество сессий, в рамках которых посещалась данные страницы"
       ]
