Add plots to model.ipynb

--- a/model/model.ipynb
+++ b/model/model.ipynb
@@ -539,7 +539,7 @@
         "\n",
         "1 _ Обучение базовых моделей (**Gaussian Naïve Bayes**, **kNN**, **Logistic Regression**, **Random Forest**) с параметрами по умолчанию на подмножестве *числовых признаков*.\n",
         "\n",
-        "2 _ Подобор оптимальныхгиперпараметров для моделей, используя только *числовые* признаки.\n",
+        "2 _ Подобор оптимальных гиперпараметров для моделей, используя только *числовые* признаки.\n",
         "\n",
         "3 _ Сравнение моделей с лучшими подобранными гиперпараметрами и выбор оптимальной на основе анализа метрик качества.\n",
         "\n",
@@ -2700,6 +2700,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "<a id='my-section'></a>\n",
         "### Анализ Explainer Dashboard\n",
         "\n",
         "**1 _ Наиболее важные для получения прогноза факторы**\n",
